<resources>
    <string name="app_name">Jerry store</string>
    <string name="hi_jerry">Hi, Jerry 👋🏻</string>
    <string name="which_tom_do_you_want_to_buy">Which Tom do you want to buy?</string>
    <string name="notifications_button">notifications button</string>
    <string name="search_about_tom">Search about tom ...</string>
    <string name="buy_1_tom_and_get_2_for_free">Buy 1 Tom and get 2 for free</string>
    <string name="adopt_tom_free_fail_free_guarantee">Adopt Tom! (Free Fail-Free Guarantee)</string>
    <string name="cheap_tom_section">Cheap tom section</string>
    <string name="view_all">View all</string>
    <string name="section_view_all_arrow">section_View_all_arrow</string>
    <string name="sport_tom">Sport Tom</string>
    <string name="he_runs_1_meter_trips_over_his_boot">He runs 1 meter... trips over his boot.</string>
    <string name="_5_3_cheeses"><strike>5</strike> 3 cheeses</string>
    <string name="banner">banner</string>
    <string name="num3">3</string>
    <string name="tom_the_lover">Tom the lover</string>
    <string name="he_loves_one_sidedly_and_is_beaten_by_the_other_side">He loves one-sidedly... and is beaten by the other side.</string>
    <string name="_5_cheeses">5 cheeses</string>
    <string name="tom_the_bomb">Tom the bomb</string>
    <string name="he_blows_himself_up_before_jerry_can_catch_him">He blows himself up before Jerry can catch him.</string>
    <string name="_10_cheeses">10 cheeses</string>
    <string name="frozen_tom">Frozen Tom</string>
    <string name="he_was_chasing_jerry_he_froze_after_the_first_look">He was chasing Jerry, he froze after the first look</string>
    <string name="disguises_itself_as_a_table">Disguises itself as a table.</string>
    <string name="spy_tom">Spy Tom</string>
    <string name="he_doesn_t_chase_anyone_he_just_snores_in_stereo">He doesn\'t chase anyone, he just snores in stereo.</string>
    <string name="sleeping_tom">Sleeping Tom</string>
    <string name="_12_cheeses">12 cheeses</string>
</resources>